--- a/public/app.css
+++ b/public/app.css
@@ -44,17 +44,16 @@ p {
   background: #fff url(images/tracks.png) no-repeat;
   background-size: cover;
   display: flex;
-  margin: 2em auto;
+  margin: 2em;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   flex-wrap: wrap;
-  width: 750px;
 }
 
 .grid-item {
   position: relative;
   box-sizing: border-box;
+  width: 100%;
   height: 250px;
-  width: 250px;
 }
 
 .grid-item:nth-child(1) {
